# core-explore-gui

./: .gitignore  Deep Dive Template.xlsx  README.md  run.py  setup.cfg  temp.html  test.py  token.pickle
myenv/: pyvenv.cfg
processed_cores/: KW - Buckhead - 012014 - Core 12.csv  KW - Buckhead - 012015 - Core 12.csv  KW - Buckhead - 012016 - Core 12.csv  KW - Buckhead - 022016 - Core 12.csv  KW - Buckhead - 032016 - Core 12.csv  KW - Buckhead - 042014 - Core 12.csv  KW - Buckhead - 042016 - Core 12.csv  KW - Buckhead - 062015 - Core 12.csv  KW - Buckhead - 082015 - Core 12.csv  KW - Buckhead - 092014 - Core 12.csv  KW - Buckhead - 092015 - Core 12.csv  KW - Buckhead - 112014 - Core 12.csv  KW - Buckhead - 112015 - Core 12.csv  KW - Buckhead - 122014 - Core 12.csv  KW - Camp Creek - 022016 - Core 12.csv  KW - Camp Creek - 042016 - Core 12.csv  KW - Camp Creek - 052015 - Core 12.csv  KW - Camp Creek - 062015 - Core 12.csv  KW - Camp Creek - 072015 - Core 12.csv  KW - Camp Creek - 082015 - Core 12.csv  KW - Camp Creek - 092015 - Core 12.csv  KW - Camp Creek - 102015 - Core 12.csv  KW - Cityside - 022015 - Core 12.csv  KW - Cityside - 032015 - Core 12.csv  KW - Cityside - 042015 - Core 12.csv  KW - Cityside - 052014 - Core 12.csv  KW - Cityside - 062014 - Core 12.csv  KW - Cityside - 062015 - Core 12.csv  KW - Cityside - 072014 - Core 12.csv  KW - Cityside - 082014 - Core 12.csv  KW - Cityside - 092015 - Core 12.csv  KW - Cityside - 102014 - Core 12.csv  KW - Cityside - 112014 - Core 12.csv  KW - Cityside - 112015 - Core 12.csv  KW - Cityside - 122014 - Core 12.csv  (+1830 more)
(+2 files in other folders)
