[metadata]
name=core_explore
version=file: VERSION.txt
author=Jakob Bellamy
author_email=jakob.bellamy@supremelending.com
description="A python app to help explore KW Core Reports."
long_description=file: README.md
long_description_content_type = text/markdown
[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pandas
    openpyxl
    numpy
[options.packages.find]
where = src
[options.entry_points]
console_scripts =
    core_explore = core_explore.__main__:main